# camera

./: CMakeLists.txt  README.md  frame_cloud.pcd
inc/: camera_k4a.hpp  main.hpp  myinfer.hpp  realsense.hpp  utils.hpp
src/: camera_k4a.cpp  dynamic_recog.cpp  k4a_capture.cpp  k4amain.cpp  myinfer.cpp  realsense.cpp  rs.copy  rsmain.cpp
workspace/model_temp/: onnx_cvt.py
workspace/videos/: FrameExtractor.py
